--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.codetrade.app.AuthenticationActivity"/>
+        <activity android:name="com.codetrade.app.AuthenticationActivity" />
         <activity android:name="com.codetrade.app.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
